# jupyenv

./: .gitignore  README.md  flake.nix  jupyterlab.nix  pyproject.toml
docs/documentation/: developers.md
example/Python/nixpkgs-graph/: degree_distribution.ipynb  nodes.csv  shell.nix
kernels/: default.nix
kernels/available/bash/: default.nix
kernels/available/c/: default.nix
kernels/available/elm/: default.nix
kernels/available/go/: default.nix
kernels/available/haskell/: default.nix
kernels/available/javascript/: default.nix
kernels/available/julia/: default.nix
kernels/available/nix/: default.nix
kernels/available/ocaml/: default.nix
kernels/available/postgres/: default.nix
kernels/available/python/: default.nix
kernels/available/r/: default.nix
kernels/available/rust/: default.nix
kernels/available/scala/: default.nix
kernels/available/typescript/: default.nix
kernels/available/zsh/: default.nix
kernels/ihaskell/: default.nix
kernels/ijulia/: default.nix
kernels/inix/: default.nix
kernels/ipython/: default.nix
kernels/julia/: default.nix
kernels/rust/: default.nix
lib/: directory.nix  jupyter.nix  kernels.nix  overrides.nix
modules/: default.nix  kernel.nix  poetry.nix
modules/types/: overlays.nix  poetry.nix
