[tool.poetry]
name = "jupyter-nix"
version = "0.1.0"
description = "Declarative and reproducible Jupyter environments - powered by Nix"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
testbook = "*"

[tool.poetry.group.jupytext.dependencies]
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
